# PDF-Bookmark-Automator

./: CLONE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: __init__.py  main.py
app/gui/: __init__.py  main_window.py  widgets.py
app/utils/: __init__.py  file_utils.py  ocr_utils.py  pdf_utils.py
config/: default_config.json
tests/: test_gui.py  test_ocr.py  test_pdf.py
